-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.9.0
-
None
-
-
3acc3ff4b (dev), 823fb7a5c (6.10)
I'm using qutebrowser as my web browser which is based on WebEngine. After upgrade of Qt to 6.9.0 one of my machines with NVIDIA Fermi GPU (legacy 390xx driver) stopped showing any web page content. It appears WebEngine fails to find correct display configuration as neither GBM nor Vulkan is supported by this driver. However Vulkan appears to be forced anyway?
14:34:30 WARNING: GBM is not supported with the current configuration. Fallback to Vulkan rendering in Chromium. [8950:8972:0423/143430.813559:ERROR:vulkan_instance.cc(386)] vkEnumeratePhysicalDevices failed: -3 [8950:8972:0423/143430.813579:ERROR:vulkan_implementation_qt.cpp(40)] Failed to initialize vulkan instance [8950:8972:0423/143430.813588:ERROR:gpu_init.cc(1247)] Failed to create and initialize Vulkan implementation. [8950:8972:0423/143430.814190:WARNING:viz_main_impl.cc(85)] VizNullHypothesis is disabled (not a warning) 14:34:31 WARNING: Backend texture is not a Vulkan texture. 14:34:32 WARNING: Backend texture is not a Vulkan texture. 14:34:32 WARNING: Backend texture is not a Vulkan texture. 14:34:33 WARNING: Backend texture is not a Vulkan texture. 14:34:33 WARNING: Backend texture is not a Vulkan texture. 14:34:34 WARNING: Backend texture is not a Vulkan texture. ...
| For Gerrit Dashboard: QTBUG-136160 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 677376,2 | Fallback to software rendering if both GBM and Vulkan are unavailable | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 685008,2 | Fallback to software rendering if both GBM and Vulkan are unavailable | 6.10 | qt/qtwebengine | Status: MERGED | +2 | 0 |