Fallback to software rendering if both GBM and Vulkan are unavailable

Fixes: QTBUG-136160
Pick-to: 6.9
Change-Id: Ibc258c2c921294af5f69843022b52f2b66a0ec1b
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>
(cherry picked from commit 3acc3ff4bce23e5f3377baad2b4774c450e3ca57)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>